Add image carousel to homepage; absolute references to images for email

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,37 +1,4 @@
-<div id="header">
-	<div class="content">
-		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
-			<div id="logo-line-1">msft401k</div>
-			<div id="logo-line-2">by Vest Me</div>			
-		</div>
-
-		<div id="navbar">
-			<a id="top-link-signup" href="#" onclick="scroll_to_top()">Sign Up</a> |
-			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Our Returns</a> |
-			<a id="top-link-how" href="#" onclick="top_link_scroll('how')">How It Works</a> |
-			<a id="top-link-what" href="#" onclick="top_link_scroll('what')">What Do I Do</a> |
-			<a id="top-link-who" href="#" onclick="top_link_scroll('who')">Who We Are</a> |
-			<a id="top-link-vision" href="#" onclick="top_link_scroll('vision')">Vision</a>
-		</div>
-
-		<script>
-		function scroll_to_top(){
-			$("html, body").animate({scrollTop: 0}, 1000);
-		}
-		function top_link_scroll(link_target) {
-			$("html, body").animate(
-				{ scrollTop: $('#section-' + link_target).offset().top - 70 }, 1000);
-		}
-	  	function handle_hash() {
-	  		top_link_scroll(window.location.hash.substring(1));
-  		}
-		$("#navbar a").click(function(event) {
-		  event.preventDefault();
-		});
-		</script>
-
-	</div>
-</div>
+<%= render 'layouts/header_home' %>
 
 <div id="poster">
 	<div class="content">
@@ -40,23 +7,23 @@
 		<div class="poster-blurb">
 
 		<h3>We provide a better way to invest your 401k with reduced volatility and higher returns</h3>
-
-			=> Personalized for Microsoft 401k<br />
-			=> Easy to follow monthly rebalance signals<br />
-			=> Made by Microsoft employees for Microsoft employees<br />
-			=> It's free!  Just takes 5 minutes per month
-
+		<ul>
+			<li>Tailor-made for the Microsoft 401k Plan</li>
+			<li>Easy to follow monthly rebalance signals</li>
+			<li>Made by Microsoft employees for Microsoft employees</li>
+			<li>It's free!  Just takes 5 minutes per month</li>
+		</ul>
 		</div>
 
 		<div><img width="280" height="200" src="assets/Growth_vs_SP500.png" /></div>
+		<br />
 
 		<% if (notice =~ /SIGNUP_ERROR/) == 0 %>
 		<div class="error-div">
-			<% if notice == "SIGNUP_ERROR_EMAIL_EMPTY" %><%= "Dude, you can't just leave this shit blank." %>
-			<% elsif notice == "SIGNUP_ERROR_EMAIL_INVALID" %><%= "I said @microsoft or @gmail.  This is why we can't have nice things." %>
-			<% elsif notice == "SIGNUP_ERROR_EMAIL_DUPLICATE" %><%= "Tricky guy.  You're already signed up, homie..." %>
-			<% elsif notice == "SIGNUP_ERROR_UNKNOWN" %><%= "Something extremely unusual happened.  We're looking into it." %>
-			<% else %><%= "Something superbly unusual happened.  We're looking into it." %>
+			<% if notice == "SIGNUP_ERROR_EMAIL_EMPTY" %><%= "The email field cannot be left blank." %>
+			<% elsif notice == "SIGNUP_ERROR_EMAIL_INVALID" %><%= "This service is only available to people with an @microsoft.com email address." %>
+			<% elsif notice == "SIGNUP_ERROR_UNKNOWN" %><%= "Something unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a href="mailto:team@msft401k.com">team@msft401k.com</a>.
+			<% else %><%= "Something superbly unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a href="mailto:team@msft401k.com">team@msft401k.com</a>.
 			<% end %>
 		</div>
 		<% elsif %>
@@ -64,7 +31,7 @@
 		<% end %>
 
 		<%= form_for (@user = User.new) do |f| %>
-		  <div class="field actions">
+		  <div class="signup-form">
 		    <%= f.text_field :email, 
 		    :id => "user_email",
 		    :class => "form-text-field",
@@ -91,10 +58,37 @@
 	<div class="content">
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
-			<p>
-			Our returns are awesome!  Check out these charts.  EVERYONE loves charts...
-			</p>
-			<img class="chart-img" width="400" src="assets/Drawdown_vs_SP500.png" />
+
+
+			  <!-- SlidesJS Required: Start Slides -->
+			  <!-- The container is used to define the width of the slideshow -->
+			  <div class="container">
+			    <div id="slides">
+			      <img src="assets/chartcarousel/Drawdown_vs_SP500.png" alt="Drawdown vs. S&amp;P 500">
+			      <img src="assets/chartcarousel/Growth_vs_SP500.png" alt="Growth vs. S&amp;P 500">
+			      <img src="assets/chartcarousel/example-slide-3.jpg" alt="Photo by: Mike Ranweiler Link: http://www.flickr.com/photos/27874907@N04/4833059991/">
+			      <img src="assets/chartcarousel/example-slide-4.jpg" alt="Photo by: Stuart SeegerLink: http://www.flickr.com/photos/stuseeger/97577796/">
+			      <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left"></i></a>
+			      <a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right"></i></a>
+			    </div>
+			  </div>
+			  <!-- End SlidesJS Required: Start Slides -->
+
+			<!-- SlidesJS Required: Link to jquery.slides.js -->
+			<script src="assets/jquery.slides.min.js"></script>
+			<!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
+  <script>
+    $(function() {
+      $('#slides').slidesjs({
+        width: 600,
+        height: 400,
+        navigation: false
+      });
+    });
+  </script>
+  <!-- End SlidesJS Required -->
 		</div>
 		<div class="main-section" id="section-how">
 			<h2>How It Works</h2>
@@ -125,58 +119,40 @@
 			<h2>Who We Are</h2>
 			<div class="three-column-div three-column-margin">
 			<div><img src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
-				<p>
-				Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.
-				</p>
+				<p>Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
 			</div>
 			<div class="three-column-div three-column-margin">
 			<div><img src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
-				<p>
-				Gary is another Microsoftie product guy.  He's also web development nerd and he'll talk your ear off about the benefits of a plant-based diet.
-				</p>
+				<p>Gary is another Microsoftie product guy.  He's also web development nerd and he'll talk your ear off about the benefits of a plant-based diet.</p>
 			</div>
 			<div class="three-column-div">
-			<div class="picbox">Xavier's Pic</div>
-				<p>
-				Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.
-				</p>
+			<div><img src="assets/VestMe-Gary.jpg" alt="Xavier" /></div>
+				<p>Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.</p>
 			</div>
 			<div class="clear-div"></div>
 		</div>
 		<div class="main-section" id="section-vision">
 			<h2>Vision</h2>
-			<p>
-			We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are
-setting out to build a product that we want first, because we think it will help friends and coworkers.
-</p><p>
-Advisors resign to push only one type of investment strategy for money in 401ks. They push Modern
-Portfolio Theory and their passive portfolios as the only solutions. These strategies require that
-investors select a level of risk as if risk equals more reward. Under Modern Portfolio Theory investors
-need to increase risk to increase returns eventually causing the strategy and investor to crack in major
-market meltdowns (remember 2008?).
-</p><p>
-Online as well as paid advisors don’t offer guidance on 401k plans because there is no way for them
-to monetize the management of money held in a 401k. As such there are limited strategies and help
-provided to participants of 401ks.
-</p><p>
-We believe in an alternative and better way of investing our money in our 401k. We believe risk should
-be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds
-(stable) depending on the market conditions.
-</p><p>
-We developed an algorithm based on proven risk management strategies utilized by complex hedge
-fund managers worldwide. We believe in its ability to control the ups and downs of the market while
-also giving us a good return over the long run.
-</p><p>
-We will give monthly rebalance “blueprints” in the form of an email to all subscribers.
-			</p>
+			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are
+			setting out to build a product that we want first, because we think it will help friends and coworkers.</p>
+			<p>Advisors resign to push only one type of investment strategy for money in 401ks. They push Modern
+			Portfolio Theory and their passive portfolios as the only solutions. These strategies require that
+			investors select a level of risk as if risk equals more reward. Under Modern Portfolio Theory investors
+			need to increase risk to increase returns eventually causing the strategy and investor to crack in major
+			market meltdowns (remember 2008?).</p>
+			<p>Online as well as paid advisors don’t offer guidance on 401k plans because there is no way for them
+			to monetize the management of money held in a 401k. As such there are limited strategies and help
+			provided to participants of 401ks.</p>
+			<p>We believe in an alternative and better way of investing our money in our 401k. We believe risk should
+			be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds
+			(stable) depending on the market conditions.</p>
+			<p>We developed an algorithm based on proven risk management strategies utilized by complex hedge
+			fund managers worldwide. We believe in its ability to control the ups and downs of the market while
+			also giving us a good return over the long run.</p>
+			<p>We will give monthly rebalance “blueprints” in the form of an email to all subscribers.</p>
 		</div>
 	</div>
 
-	<div id="footer">
-		<div class="content">
-			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
-		</div>
-	</div>
+    <%= render 'layouts/footer' %>
 </div>
 
