--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -63,6 +63,7 @@ body {
 #poster { 
 	background-color: #017890; 
 	color: white; 
+	/* text-shadow: black 0.1em 0.1em 0.2em; */
 	padding: 85px 0px 30px 0px; 
 	display: block;
 	width: 100%;
@@ -143,6 +144,8 @@ body {
 	color: #555555;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;	
 }
+
+.signup-form { margin-top: -1em;}
 
 .three-column-div { 
 	width: 230px; 
