--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,31 +1,4 @@
-<div id="header">
-<div id="header">
-	<div class="content">
-		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
-			<div id="logo-line-1">msft401k</div>
-			<div id="logo-line-2">by Vest Me</div>			
-		</div>
-
-		<div id="navbar">
-			<a id="top-link-signup" href="/">Sign Up</a> |
-			<a id="top-link-returns" href="/#returns">Our Returns</a> |
-			<a id="top-link-how" href="/#how">How It Works</a> |
-			<a id="top-link-what" href="/#what">What Do I Do</a> |
-			<a id="top-link-who" href="/#who">Who We Are</a> |
-			<a id="top-link-vision" href="/#vision">Vision</a>
-		</div>
-
-		<script>
-	  	function handle_hash() {
-  			// nothing to do for this page
-  		}
-		$("#navbar a").click(function(event) {
-		  	//event.preventDefault();
-		});
-		</script>
-
-	</div>
-</div>
+<%= render 'layouts/header_other' %>
 
 <div id="poster">
 	<div class="content">
@@ -197,10 +170,5 @@
 
 	</div>
 
-	<div id="footer">
-		<div class="content">
-			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
-		</div>
-	</div>
+    <%= render 'layouts/footer' %>
 </div>
