--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,82 @@
   <title>msft401k</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
   <%= csrf_meta_tags %>
+
+  <!-- SlidesJS Required (if responsive): Sets the page width to the device width. -->
+  <meta name="viewport" content="width=device-width">
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: These styles are required if you'd like a responsive slideshow -->
+  <style>
+    /* Prevent the slideshow from flashing on load */
+    #slides {
+      display: none
+    }
+
+    /* Center the slideshow */
+    .container {
+      margin: 0 auto
+    }
+
+    /* Show active item in the pagination */
+    .slidesjs-pagination .active {
+      color:red;
+    }
+
+	#slides .slidesjs-container {
+	  margin-bottom:10px;
+	}
+
+	#slides .slidesjs-previous {
+	  margin-right: 5px;
+	  float:left;
+	}
+	#slides .slidesjs-next {
+	  margin-right: 5px;
+	  float:left;
+	}
+
+	.slidesjs-pagination {
+	    margin:6px 0 0;
+	    float: right;
+	    list-style: none;
+	}
+
+	.slidesjs-pagination li {
+	    float: left;
+	    margin: 0 1px;
+	}
+
+	.slidesjs-pagination li a {
+	    display: block;
+	    width: 13px;
+	    height: 0;
+	    padding-top: 13px;
+	    background-image: url(assets/chartcarousel/pagination.png);
+	    background-position: 0 0;
+	    float: left;
+	    overflow: hidden;
+	}
+
+	.slidesjs-pagination li a.active, .slidesjs-pagination li a:hover.active { background-position: 0 -13px }
+
+	.slidesjs-pagination li a:hover { background-position: 0 -26px }
+
+	#slides a:link, #slides a:visited { color: #333 }
+
+	#slides a:hover, #slides a:active { color: #9e2020 }
+
+    /* Media quires for a responsive layout */
+      .container {
+        width: 600px
+      }
+  </style>
+  <!-- SlidesJS Required: -->
+
 </head>
 <body onload="handle_hash();">
-
 <%= yield %>
-
 </body>
 </html>
