fix broken image ref and update step7 img

--- a/app/views/layouts/_instructions.html.erb
+++ b/app/views/layouts/_instructions.html.erb
@@ -1,5 +1,5 @@
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 1: Log into your Microsoft 401k account at <a href="http://www.401k.com">http://www.401k.com</a>.</h4>
-<div><img src="http://www.msft401k.com/assets/Step1.png" alt="Step 1" /></div>
+<div><img src="http://www.msft401k.com/assets/stepbystep/Step1.png" alt="Step 1" /></div>
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 2: If you have multiple relationships with Fidelity, choose Microsoft Benefits.</h4>
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step2.png" alt="Step 2" /></div>
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 3: Select your Microsoft 401k Plan account.</h4>
@@ -21,3 +21,4 @@
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step10.png" alt="Step 10" /></div>
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 11: You're done!  At the end, you'll see a confirmation page.</h4>
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step11.png" alt="Step 11" /></div>
+
