reference application.js inline in index.html

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,6 +76,7 @@
 
 			<!-- SlidesJS Required: Link to jquery.slides.js -->
 			<script src="assets/jquery.slides.min.js"></script>
+			<script src="assets/application.js"></script>
 			<!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
