--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -196,7 +196,7 @@ body {
 	float: left; 
 	width: 500px; 
 	font-size: 100%;
-	color: #E0E0E0;
+	color: white;
 	padding: 0px 20px 0px 0px;
 	font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;
 }
