temp change 'sign up' to 'go'

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
 		    :id => "user_email",
 		    :class => "form-text-field",
 		    :placeholder => "enter your @microsoft or @gmail email",
-		    :value => params[:email] %><%= f.submit "Sign Up!", 
+		    :value => params[:email] %><%= f.submit "Go!", 
 		    	:class => "form-button" %>
 		  </div>
 		<% end %>
