change go back to sign up and float the button on the right

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -129,6 +129,7 @@ body {
 	font-size: 200%;
 	color: white;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;
+	float: right;
 }
 
 .form-button:hover, .form-button:active {
@@ -145,6 +146,7 @@ body {
 	font-size: 200%;
 	color: #555555;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;	
+	float: left;
 }
 
 .signup-form { margin-top: -1em;}
