attempt to style form button for iphone

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -130,6 +130,7 @@ body {
 	color: white;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;
 	float: right;
+	-webkit-appearance: none;
 }
 
 .form-button:hover, .form-button:active {
