remove webkit test size adjust for iphone

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,6 +7,7 @@ body {
 	margin: 0px; 
 	padding: 0px; 
 	font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;
+	-webkit-text-size-adjust:none;
 }
 
 #logo { 
