turn user scalable to off

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
   <%= csrf_meta_tags %>
 
-
+  <meta name="viewport" content="user-scalable=0" />
 
   <!-- SlidesJS Required: These styles are required if you'd like a responsive slideshow -->
   <style>
