--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
   <%= csrf_meta_tags %>
 
-  <meta name="viewport" content="user-scalable=0" />
+  <script>
+  	if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+	   document.write('<meta name="viewport" content="user-scalable=0" />');
+	}
+  </script>
 
   <!-- SlidesJS Required: These styles are required if you'd like a responsive slideshow -->
   <style>
