change no text sizing for poster for iphone only

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -69,7 +69,11 @@ body {
 	width: 100%;
 	position: fixed;
 	z-index: 1;
-	-webkit-text-size-adjust:none;
+	
+}
+
+@media screen and (max-device-width: 480px) { 
+	#poster { -webkit-text-size-adjust:none; }
 }
 
 #main { 
@@ -79,7 +83,7 @@ body {
 	display: block;
 	width: 100%;
 	position: absolute;
-	margin-top: 528px;
+	margin-top: 527px;
 	/* slide-away styling */
 	-webkit-box-shadow: rgba(0, 0, 0, 0.246094) 0px -2px 15px 0px;
 	background-attachment: scroll;
@@ -145,7 +149,7 @@ body {
 	border: 0px solid white;
 	padding: 15px 22px;
 	width: 579px;
-	margin: 0px 0px 5px 0px;
+	margin: 0px 0px 25px 0px;
 	font-size: 200%;
 	color: #555555;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;	
