--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <script type="text/javascript">
   	var isiDevice = navigator.userAgent.match(/iPad|iPhone|iPod/g);
   	if (isiDevice != null) { 
-  		document.write('<meta name="viewport" content="width=820, user-scaleable=no">')
+  		document.write('<meta name="viewport" content="width=840, user-scalable=no">')
   	}
   	else {
   		//
