--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,15 +4,17 @@
 	<div class="content">
 		<h1>Unlock the potential of your Microsoft 401k</h1>
 
-		<div class="poster-blurb">
+		<div id="poster-blurb">
 
 		<h3>We provide a better way to invest your 401k with reduced volatility and higher returns</h3>
-		<ul>
-			<li>Tailor-made for the Microsoft 401k Plan</li>
-			<li>Easy to follow monthly rebalance signals</li>
-			<li>Made by Microsoft employees for Microsoft employees</li>
-			<li>It's free!  Just takes 5 minutes per month</li>
-		</ul>
+			<div id="poster-bullets">
+				<ul>
+					<li>Tailor-made for the Microsoft 401k Plan</li>
+					<li>Easy to follow monthly rebalance signals</li>
+					<li>Made by Microsoft employees for Microsoft employees</li>
+					<li>It's free!  Just takes 5 minutes per month</li>
+				</ul>
+			</div>
 		</div>
 
 		<div><img width="280" height="200" src="assets/Growth_vs_SP500.png" /></div>
@@ -59,7 +61,6 @@
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
 
-
 			  <!-- SlidesJS Required: Start Slides -->
 			  <!-- The container is used to define the width of the slideshow -->
 			  <div class="container">
@@ -75,36 +76,55 @@
 			  <!-- End SlidesJS Required: Start Slides -->
 
 			<!-- SlidesJS Required: Link to jquery.slides.js -->
-			<script src="assets/jquery.slides.min.js"></script>
 			<script src="assets/application.js"></script>
 			<!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
   <script>
-    $(function() {
-      $('#slides').slidesjs({
-        width: 600,
-        height: 400,
-        navigation: false
-      });
-    });
+  	//alert(navigator.userAgent);
+  	var isWP7Device = navigator.userAgent.match(/Windows Phone OS 7/g);
+  	if (isWP7Device != null) { 
+  		$(function() {
+	      $('#slides').slidesjs({
+	        width: 800,
+	        height: 533
+	      });
+	      $(".icon-chevron-left").hide();
+	      $(".icon-chevron-right").hide();
+	      document.getElementById("poster-bullets").style.fontSize="150%";
+	      var prevNextElements = document.getElementById("slides").getElementsByTagName("a");
+	      for (i=0; i<prevNextElements.length; i++) {
+	      	if (prevNextElements[i].innerHTML == "Previous" || prevNextElements[i].innerHTML == "Next") {
+		      	prevNextElements[i].style.fontSize="180%";
+		      	prevNextElements[i].innerHTML += "&nbsp;&nbsp;&nbsp;"
+	      	}
+	      }
+	    });  		
+  	}
+  	else {
+  		$(function() {
+	      $('#slides').slidesjs({
+	        width: 800,
+	        height: 533,
+	        navigation: false
+	      });
+	    });
+  	}
+
+	$("#slides").click(function(){ 
+	    $(".icon-chevron-right").trigger("click"); 
+	}); 
   </script>
   <!-- End SlidesJS Required -->
 		</div>
 		<div class="main-section" id="section-how">
 			<h2>How It Works</h2>
-			<p>
-			You've probably heard about the difference between stocks and bonds, and in particular that stocks are "risker."  Well, generally speaking, that is true, and that's a core part of how this works...
-			</p>
-			<p>
-			First, we measure and track market risk.  Then, when the market risk is high, we put more money into bonds -- this is to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks -- this is so you maximize gains when the stock market is doing well.  And the extra secret sauce: we tailor this to the invesment options available under the Microsoft 401k plan.
-			</p>
+			<p id="foobar">You've probably heard about the difference between stocks and bonds, and in particular that stocks are "risker."  Well, generally speaking, that is true, and that's a core part of how this works...</p>
+			<p>First, we measure and track market risk.  Then, when the market risk is high, we put more money into bonds -- this is to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks -- this is so you maximize gains when the stock market is doing well.  And the extra secret sauce: we tailor this to the invesment options available under the Microsoft 401k plan.</p>
 		</div>
 		<div class="main-section" id="section-what">
 			<h2>What Do I Do</h2>
-			<p>
-			It's so easy!  Every month, we'll send you our recommendation for asset allocations.  We'll tell you step-by-step how to log into your account and update your 401k account allocations to maximize performance and minimize risk.
-			</p>
+			<p>It's so easy!  Every month, we'll send you our recommendation for asset allocations.  We'll tell you step-by-step how to log into your account and update your 401k account allocations to maximize performance and minimize risk.</p>
 			<div class="two-column-div two-column-margin">
 				<img src="assets/Rebalance.png" alt="Rebalance" />
 				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
