udpate xavier's picture

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -147,7 +147,7 @@
 				<p>Gary is another Microsoftie product guy.  He's also web development nerd and he'll talk your ear off about the benefits of a plant-based diet.</p>
 			</div>
 			<div class="three-column-div">
-			<div><img src="assets/VestMe-Gary.jpg" alt="Xavier" /></div>
+			<div><img src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
 				<p>Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.</p>
 			</div>
 			<div class="clear-div"></div>
