--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer id="footer">
 	<div class="content">
 		<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-		<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
+		<p>Questions? <a href="mailto:team@MSFT401k.com">Contact Us</a>.</p>
 	</div>
 </footer>
