--- a/app/views/layouts/_header_home.html.erb
+++ b/app/views/layouts/_header_home.html.erb
@@ -1,14 +1,15 @@
 <header id="header">
 	<div class="content">
 		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
-			<div id="logo-line-1">msft401k</div>
+			<div id="logo-line-1">MSFT401k</div>
 			<div id="logo-line-2">by Vest Me</div>			
 		</div>
 
 		<div id="navbar">
 			<a id="top-link-signup" href="#" onclick="scroll_to_top()">Sign Up</a> |
-			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Our Returns</a> |
 			<a id="top-link-how" href="#" onclick="top_link_scroll('how')">How It Works</a> |
+
+			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Our Returns</a> |
 			<a id="top-link-what" href="#" onclick="top_link_scroll('what')">What Do I Do</a> |
 			<a id="top-link-who" href="#" onclick="top_link_scroll('who')">Who We Are</a> |
 			<a id="top-link-vision" href="#" onclick="top_link_scroll('vision')">Vision</a>
