--- a/app/views/layouts/_header_other.html.erb
+++ b/app/views/layouts/_header_other.html.erb
@@ -1,14 +1,14 @@
 <header id="header">
 	<div class="content">
 		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
-			<div id="logo-line-1">msft401k</div>
+			<div id="logo-line-1">MSFT401k</div>
 			<div id="logo-line-2">by Vest Me</div>			
 		</div>
 
 		<div id="navbar">
 			<a id="top-link-signup" href="/">Sign Up</a> |
-			<a id="top-link-returns" href="/#returns">Our Returns</a> |
 			<a id="top-link-how" href="/#how">How It Works</a> |
+			<a id="top-link-returns" href="/#returns">Our Returns</a> |
 			<a id="top-link-what" href="/#what">What Do I Do</a> |
 			<a id="top-link-who" href="/#who">Who We Are</a> |
 			<a id="top-link-vision" href="/#vision">Vision</a>
