--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-body { 
+body {
 	margin: 0px; 
 	padding: 0px; 
 	font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;
@@ -64,7 +64,7 @@ body {
 	background-color: #017890; 
 	color: white; 
 	/* text-shadow: black 0.1em 0.1em 0.2em; */
-	padding: 85px 0px 30px 0px; 
+	padding: 85px 0px 20px 0px; 
 	display: block;
 	width: 100%;
 	position: fixed;
@@ -82,9 +82,10 @@ body {
 	padding: 10px 0px 0px 0px; 
 	z-index: 5; 
 	display: block;
+	min-width: 800px;
 	width: 100%;
 	position: absolute;
-	margin-top: 527px;
+	margin-top: 435px;
 	/* slide-away styling */
 	-webkit-box-shadow: rgba(0, 0, 0, 0.246094) 0px -2px 15px 0px;
 	background-attachment: scroll;
@@ -102,6 +103,7 @@ body {
 	padding: 10px 0px 0px 0px; 
 	z-index: 5; 
 	display: block;
+	min-width: 800px;
 	width: 100%;
 	position: absolute;
 	margin-top: 190px;
@@ -206,10 +208,11 @@ body {
 
 #poster-blurb { 
 	float: left; 
-	width: 500px; 
+	width: 800px; 
 	font-size: 100%;
 	color: white;
 	padding: 0px 20px 0px 0px;
+	margin-top: -28px;
 	font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;
 }
 
