--- a/app/views/layouts/_instructions.html.erb
+++ b/app/views/layouts/_instructions.html.erb
@@ -11,7 +11,7 @@
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 6: Click 'Start Your Rebalance.'</h4>
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step6.png" alt="Step 6" /></div>
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 7: Enter your rebalance percentages and click 'Begin Rebalance.'</h4>
-<p>Look for the email from team@msft401k.com at the end of every month.  In the email, you will see our recommended asset allocation for the Microsoft 401k Plan.</p>
+<p>Look for the email from team@MSFT401k.com at the end of every month.  In the email, you will see our recommended asset allocation for the Microsoft 401k Plan.</p>
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step7.png" alt="Step 7" /></div>
 <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 8: Choose 'Rebalance my account now, one time' and click 'Next.'</h4>
 <div><img src="http://www.msft401k.com/assets/stepbystep/Step8.png" alt="Step 8" /></div>
